# fco2diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
clean/: add_bin_info.ipynb  atmco2.ipynb  make_augmented_set.ipynb  make_training_set.ipynb
data/: data_sources.yaml
euler/: baseline.py  environment.yml  eval.py  expo.py  healpix.py  healpixfast.py  hpface.py  hpfast.py  hpmlp.py  mlp_expo.py  newsub.py  point.py  requirements.txt  script.sh  sota.py  sub.py  utils.py
inference/: 2Dinference.ipynb  comparison.ipynb  expo.ipynb  healpix.ipynb  image.ipynb  image_inference.ipynb  mlp.ipynb
notebooks/: 2Dinference.ipynb  cruises.ipynb  inference-gridded_data.ipynb  infutils.py  new_ds.ipynb  plots.ipynb  read_augmented_set.ipynb  remote_sensing_datasets.ipynb  scratch.ipynb  tessellation.ipynb  track_augmentation.ipynb  tracks64.ipynb  training-tabular_data.ipynb
scripts/: eval.py  newsub.py  optcal.py  requirements.txt  segment.py
src/data_explore/: collocate.py  read_netcdfs.py  socat.py  viz.py
src/dataset_create/: ucruise.py
src/fco2dataset/: ucollocate.py  ucruise.py
src/fco2models/: models.py  time_models.py  ueval.py  umeanest.py  utraining.py
src/mydiffusers/: scheduling_ddim.py  unet_1d.py
training/: 2Dinference.ipynb  eval.ipynb  image_inference.ipynb  inference.ipynb  loss_analysis.ipynb  model_comparison.ipynb  new_loss_analysis.ipynb  plots.ipynb  train1d.ipynb
