[project]
name = "oceanCO2diffusion-data-exploration"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luke", email = "gregorl@ethz.ch" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "xarray>=2025.1.2",
    "bottleneck>=1.4.2",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "dask>=2025.1.0",
    "loguru>=0.7.3",
    "pooch>=1.8.2",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.1",
    "pyarrow>=19.0.0",
    "click>=8.1.8",
    "markdown>=3.7",
    "geopandas>=1.0.1",
    "folium>=0.19.4",
    "mapclassify>=2.8.1",
    "copernicusmarine>=2.0.1",
    "ipywidgets>=8.1.5",
    "munch>=4.0.0",
    "cartopy>=0.24.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.13",
    "cmocean>=4.0.3",
    "haversine>=2.9.0",
    "torch>=2.6.0",
    "diffusers>=0.32.2",
    "pipreqs>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
dataprep-socat = "src.data_explore.socat:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/data_explore"]
